# roomba_robot

./: README.md
roomba_bringup/: CMakeLists.txt  package.xml
roomba_bringup/config/: switch.yaml
roomba_bringup/launch/: joy_teleop.launch
roomba_calibrate/: CMakeLists.txt  package.xml
roomba_calibrate/launch/: magnetometer_calibrate.launch
roomba_calibrate/scripts/: magnetometer_calibrate.py
roomba_description/: README.md  package.xml
roomba_description/launch/: create_1.launch  create_2.launch  roomba_400.launch
roomba_description/urdf/: create_1.urdf.xacro  create_2.urdf.xacro  create_base.urdf.xacro
roomba_hardware/: CMakeLists.txt  README.md  package.xml
roomba_hardware/cfg/: iron_offsets.yaml  magnetometer_calibration.yaml
roomba_hardware/include/create_driver/: create_driver.h
roomba_hardware/launch/: compass.launch  compass_test.launch  hardware.launch
roomba_hardware/scripts/: calibrate_irons.py  iron_math.py
roomba_hardware/src/: compass.cpp  compass_test.cpp  create_driver.cpp
